# aws-ec2-imdsv2-get

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
