[package]
name = "aws-ec2-imdsv2-get"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12", features = ["attributes", "tokio1"]}
reqwest = { version = "0.11", features = ["rustls"], default-features = false}